# mp4box

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: analyze.rs  boxes.rs  samples.rs  simple.rs  typed_sample_tables.rs
src/: api.rs  boxes.rs  json_api.rs  known_boxes.rs  lib.rs  parser.rs  registry.rs  samples.rs  util.rs
tests/: basic_parse.rs  custom_json.rs  hex_range.rs  json_roundtrip.rs  known_boxes.rs  registry_ftyp.rs  registry_tests.rs
